Added new project

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            I'm software developer from Popayan, Colombia, working lately in creation on backend web aplications, I'm interested in web applicacion and new technologies like blockchain and AI.
+            I'm software developer from Popayan, Colombia, working lately in creation on backend web aplications, I'm interested in web development and new technologies like blockchain and AI.
           </p>
 
           <p>
@@ -759,6 +759,24 @@
                 <h3 class="project-title">Movies App Testing</h3>
 
                 <p class="project-category">Testing</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://github.com/sebart7/master-management">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./images/MasterManagement.jpg" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Master Management</h3>
+
+                <p class="project-category">Web development</p>
 
               </a>
             </li>
