Update link Linkedin

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
+    
+
 </head>
 <body>
 	<!--
@@ -128,7 +130,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/sebastian-arenas-rodriguez-51169422b/" class="social-link">
+            <a href="https://co.linkedin.com/in/sebart7?trk=profile-badge" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -1021,6 +1023,9 @@
 
         </section>
 
+        <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="sebart7" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://co.linkedin.com/in/sebart7?trk=profile-badge">Sebastián Arenas Rodríguez</a></div>
+              
+
       </article>
 
     </div>
@@ -1042,5 +1047,6 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
