--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="info-content">
           <h1 class="name" title="Sebastian Arenas">Sebastian Arenas</h1>
 
-          <p class="title">Backend Web developer</p>
+          <p class="title">Software Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -568,8 +568,13 @@
           <ol class="timeline-list">
 
             <li class="timeline-item">
+              <a href="https://www.sgc.gov.co/">
+                <h4 class="h4 timeline-item-title">Monitor Colombian Geological Service (SGC)</h4>
+              </a>
 
-              <h4 class="h4 timeline-item-title">Monitor Colombian Geological Service (SGC)</h4>
+              <p class="timeline-text">
+                Colombian Geological Service (SGC)
+              </p>
 
               <span>2020 — 2021</span>
 
@@ -578,6 +583,25 @@
               </p>
 
             </li>
+
+
+             <li class="timeline-item">
+              <a href="https://www.claplatam.com/">
+                <h4 class="h4 timeline-item-title">Software Developer at Clap</h4>
+              </a>
+
+              <p class="timeline-text">
+                CLAP
+              </p>
+              
+              <span>2023 - Now</span>
+
+              <p class="timeline-text">
+                Software development implementations for Clap Platform.
+              </p>
+
+            </li>
+
 
           </ol>
 
@@ -1022,8 +1046,6 @@
           </form>
 
         </section>
-
-        <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="sebart7" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://co.linkedin.com/in/sebart7?trk=profile-badge">Sebastián Arenas Rodríguez</a></div>
               
 
       </article>
